MenuActivity의 editText에 돋보기 추가, 버튼에 이미지 파일 추가

--- a/Navigation/app/src/main/AndroidManifest.xml
+++ b/Navigation/app/src/main/AndroidManifest.xml
@@ -20,7 +20,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
-        <activity android:name=".MenuActivity" />
+        <activity android:name=".MenuActivity"
+            android:windowSoftInputMode="stateHidden">
+        </activity>
         <activity android:name=".SearchActivity"></activity>
     </application>
 
