MenuActivity 전체적으로 수정, ActionBar 생성. 검색버튼 포토샵으로 만들어 추가. 그리드뷰 추가 SearchActivity ActionBar 생성. 검색버튼 추가.

--- a/Navigation/app/src/main/AndroidManifest.xml
+++ b/Navigation/app/src/main/AndroidManifest.xml
@@ -20,10 +20,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
-        <activity android:name=".MenuActivity"
-            android:windowSoftInputMode="stateHidden">
-        </activity>
-        <activity android:name=".SearchActivity"></activity>
+        <activity
+            android:name=".MenuActivity"
+            android:windowSoftInputMode="stateHidden" />
+        <activity android:name=".SearchActivity" />
     </application>
 
 </manifest>
