ReadyActivity 생성 버튼 추가

--- a/Navigation/app/src/main/AndroidManifest.xml
+++ b/Navigation/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
             android:name=".MenuActivity"
             android:windowSoftInputMode="stateHidden" />
         <activity android:name=".SearchActivity" />
+        <activity android:name=".ReadyActivity"></activity>
     </application>
 
 </manifest>
