Navigation Activity생성하고 bottom bar 생성 . 임시 앱 아이콘 로딩화면에 넣음. 이미지버튼에 들어갈 이미지 수정. 메뉴Activity와 다른 Activity와의 연결

--- a/Navigation/app/src/main/AndroidManifest.xml
+++ b/Navigation/app/src/main/AndroidManifest.xml
@@ -23,8 +23,17 @@
         <activity
             android:name=".MenuActivity"
             android:windowSoftInputMode="stateHidden" />
-        <activity android:name=".SearchActivity" />
-        <activity android:name=".ReadyActivity"></activity>
+        <activity
+            android:name=".SearchActivity"
+            android:parentActivityName=".MenuActivity" />
+        <activity
+            android:name=".ReadyActivity"
+            android:parentActivityName=".MenuActivity" />
+        <activity android:name=".NavigationActivity" />
+        <activity android:name=".BackActivity" />
+        <activity android:name=".FavoriteActivity" />
+        <activity android:name=".NearActivity" />
+        <activity android:name=".DestinationActivity"></activity>
     </application>
 
 </manifest>
