DetailSearch Activity 생성 및 구성, Search Activity와 Destination Activity의 리스트뷰 생성

--- a/Navigation/app/src/main/AndroidManifest.xml
+++ b/Navigation/app/src/main/AndroidManifest.xml
@@ -33,7 +33,11 @@
         <activity android:name=".BackActivity" />
         <activity android:name=".FavoriteActivity" />
         <activity android:name=".NearActivity" />
-        <activity android:name=".DestinationActivity"></activity>
+        <activity android:name=".DestinationActivity" />
+        <activity
+            android:name=".StopNavigation"
+            android:theme="@android:style/Theme.DeviceDefault.Light.Dialog"></activity>
+        <activity android:name=".DetailSearchActivity"></activity>
     </application>
 
 </manifest>
