MenuActivity에서 도착지를 정하면 출발지(일단 세종대학교)에서 그때 그때의 도착지로 경로를 연결함

--- a/Navigation/app/src/main/AndroidManifest.xml
+++ b/Navigation/app/src/main/AndroidManifest.xml
@@ -31,7 +31,9 @@
         <activity android:name=".MapActivity">
 
         </activity>
-        <activity android:name=".Search2Activity"/>
+        <activity android:name=".Search2Activity">
+
+        </activity>
         <activity android:name=".MainActivity"/>
         <activity
             android:name=".MenuActivity"
@@ -44,7 +46,9 @@
         <activity
             android:name=".ReadyActivity"
             android:parentActivityName=".MenuActivity" />
-        <activity android:name=".NavigationActivity" />
+        <activity android:name=".NavigationActivity" >
+
+        </activity>
         <activity android:name=".BackActivity" />
         <activity android:name=".FavoriteActivity" />
         <activity android:name=".NearActivity" />
