경로안내 시작해서 길 그리고 마커 이미지랑 turnType에 따른 알림주기

--- a/Navigation/app/src/main/AndroidManifest.xml
+++ b/Navigation/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.WRITE_OWNER_DATA"/>
     <uses-permission android:name="android.permission.READ_OWNER_DATA"/>
     <uses-permission android:name="android.permision.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS"
         tools:ignore="ProtectedPermissions" />
     <application
@@ -26,7 +27,6 @@
         </activity>
         <activity android:name=".RoadActivity"/>
         <activity android:name=".MapActivity"/>
-        <activity android:name=".Search2Activity"/>
     </application>
 
 </manifest>
