ReadyActivity UI 수정 및 SearchActivity에서 listView 클릭시 ReadyActivity로 가게 설정. MenuActivity에서 현재위치 포인터 받게 onCreate에 설정

--- a/Navigation/app/src/main/AndroidManifest.xml
+++ b/Navigation/app/src/main/AndroidManifest.xml
@@ -44,7 +44,10 @@
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".SearchActivity"
-            android:parentActivityName=".MenuActivity" />
+            android:parentActivityName=".MenuActivity" >
+
+
+        </activity>
         <activity
             android:name=".ReadyActivity"
             android:parentActivityName=".MenuActivity" />
