--- a/Navigation/app/build.gradle
+++ b/Navigation/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-places:11.0.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.google.code.gson:gson:2.7'
+    compile 'com.android.support:support-v4:25.3.1'
     testCompile 'junit:junit:4.12'
     provided 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
 }
