--- a/Navigation/app/src/main/AndroidManifest.xml
+++ b/Navigation/app/src/main/AndroidManifest.xml
@@ -20,8 +20,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/handlearicon"
+        android:icon="@drawable/handlearicon_white"
         android:label="Handlear"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -45,7 +46,7 @@
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".Activity.SearchActivity"
-            android:parentActivityName=".Activity.MenuActivity"></activity>
+            android:parentActivityName=".Activity.MenuActivity" />
         <activity
             android:name=".Activity.ReadyActivity"
             android:parentActivityName=".Activity.MenuActivity" />
@@ -63,7 +64,9 @@
             android:name=".gpsCheck"
             android:theme="@android:style/Theme.DeviceDefault.Light.Dialog" />
         <activity android:name=".Activity.RoadActivity" />
-        <activity android:name=".Activity.POIActivity"></activity>
+        <activity android:name=".Activity.POIActivity" />
+        <activity android:name=".gasStationFragmentActivity" />
+        <activity android:name=".GasStationFragment"></activity>
     </application>
 
 </manifest>
