POI리스트, 사운드 기준 설정, 빨간 투명도 적용 화면 설정

--- a/Navigation/app/src/main/AndroidManifest.xml
+++ b/Navigation/app/src/main/AndroidManifest.xml
@@ -53,7 +53,9 @@
             android:parentActivityName=".MenuActivity" />
         <activity android:name=".Navigation.NavigationActivity" />
         <activity android:name=".SaveData.FavoriteActivity" />
-        <activity android:name=".Search.NearActivity" />
+        <activity android:name=".Search.NearActivity" >
+
+        </activity>
         <activity android:name=".SaveData.DestinationActivity" />
 
         <activity
