병합 전 커밋

--- a/Navigation/app/src/main/AndroidManifest.xml
+++ b/Navigation/app/src/main/AndroidManifest.xml
@@ -62,7 +62,9 @@
             android:name=".Navigation.StopNavigation"
             android:theme="@android:style/Theme.DeviceDefault.Light.Dialog" />
         <activity android:name=".Search.DetailSearchActivity" />
-        <activity android:name=".SaveData.NoticeActivity" />
+        <activity android:name=".SaveData.NoticeActivity" >
+
+        </activity>
         <activity
             android:name=".gpsCheck"
             android:theme="@android:style/Theme.DeviceDefault.Light.Dialog" />
